--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
               <!-- popup window -->
               <div id="modal">
                   <p id="temperature"></p>
-                  <button id="close-btn">Close</button>
+                  <button id="close-btn">Đóng</button>
               </div>
 
               <script src="assets/js/weather .js"></script> <!-- API -->
